Added support for origin (via referer header) and original_query
