# service-doc/swagger.yaml
@@ -51,17 +51,13 @@ paths:
         "401":
           description: Missing or invalid API key in Authorization header.
           content:
-            text/plain: {}
-        "404":
-          description: Missing description.
-          content:
-            text/plain: {}
+            text/html: {}
         "500":
           description: Unexpected server side error.
           content:
             text/html: {}
         "200":
-          description: JVM system properties of a particular host.
+          description: List of all collections for the authenticated user.
           content:
             application/json: {}
             application/xml: {}
@@ -69,6 +65,8 @@ paths:
       - apiKey: []
   /v1/collections:
     get:
+      summary: Get the list of public collections
+      description: Get the list of public collections.
       operationId: getVirtualCollections
       parameters:
       - name: q
@@ -95,6 +93,11 @@ paths:
             application/xml: {}
             application/json: {}
     post:
+      summary: Create a new collection
+      description: "A virtual collection will be created based on the representation\
+        \ of the virtual collection sent in the request body. ID and state, if provided,\
+        \ will be ignored so this will always result in a private collection with\
+        \ a new identifier."
       operationId: createVirtualCollection
       requestBody:
         content:
@@ -108,15 +111,26 @@ paths:
             schema:
               type: object
       responses:
-        default:
-          description: default response
+        "401":
+          description: Missing or invalid API key in Authorization header.
           content:
-            text/xml: {}
-            application/xml: {}
+            text/html: {}
+        "500":
+          description: Unexpected server side error.
+          content:
+            text/html: {}
+        "200":
+          description: Representation of the created collection.
+          content:
             application/json: {}
+            application/xml: {}
+      security:
+      - apiKey: []
   /v1/collections/{id}:
     get:
-      operationId: getVirtualCollectionDetailsRedirect
+      summary: Retrieve a virtual collection
+      description: The virtual collection referenced by the URI will be retrieved.
+      operationId: getVirtualCollection
       parameters:
       - name: id
         in: path
@@ -125,11 +139,24 @@ paths:
           type: integer
           format: int64
       responses:
-        default:
-          description: default response
+        "404":
+          description: Not found.
           content:
             text/html: {}
+        "500":
+          description: Unexpected server side error.
+          content:
+            text/html: {}
+        "200":
+          description: Representation of the requested collection.
+          content:
+            application/json: {}
+            application/xml: {}
     put:
+      summary: 'Update a virtual collection '
+      description: "The virtual collection identified by the URI will be updated,\
+        \ actually replaced, with the representation of the virtual collection sent\
+        \ in the request body."
       operationId: updateVirtualCollection
       parameters:
       - name: id
@@ -150,13 +177,24 @@ paths:
             schema:
               type: object
       responses:
-        default:
-          description: default response
+        "401":
+          description: Missing or invalid API key in Authorization header.
           content:
-            text/xml: {}
-            application/xml: {}
+            text/html: {}
+        "500":
+          description: Unexpected server side error.
+          content:
+            text/html: {}
+        "200":
+          description: Representation of the updated collection.
+          content:
             application/json: {}
+            application/xml: {}
+      security:
+      - apiKey: []
     delete:
+      summary: 'Delete a virtual collection '
+      description: The virtual collection referenced by the URI will be deleted.
       operationId: deleteVirtualCollection
       parameters:
       - name: id
@@ -166,12 +204,20 @@ paths:
           type: integer
           format: int64
       responses:
-        default:
-          description: default response
+        "401":
+          description: Missing or invalid API key in Authorization header.
           content:
-            text/xml: {}
-            application/xml: {}
+            text/html: {}
+        "500":
+          description: Unexpected server side error.
+          content:
+            text/html: {}
+        "200":
+          content:
             application/json: {}
+            application/xml: {}
+      security:
+      - apiKey: []
   /v1/collections/{id}/state:
     get:
       operationId: getVirtualCollectionState
@@ -191,179 +237,6 @@ paths:
             application/json: {}
     post:
       operationId: setVirtualCollectionState
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          text/xml:
-            schema:
-              type: string
-              xml:
-                name: State
-              enum:
-              - private
-              - public
-              - public_frozen
-          application/xml:
-            schema:
-              type: string
-              xml:
-                name: State
-              enum:
-              - private
-              - public
-              - public_frozen
-          application/json:
-            schema:
-              type: string
-              xml:
-                name: State
-              enum:
-              - private
-              - public
-              - public_frozen
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-  /v2/collections:
-    get:
-      operationId: getVirtualCollections_1
-      parameters:
-      - name: q
-        in: query
-        schema:
-          type: string
-      - name: offset
-        in: query
-        schema:
-          type: integer
-          format: int32
-          default: 0
-      - name: count
-        in: query
-        schema:
-          type: integer
-          format: int32
-          default: -1
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-    post:
-      operationId: createVirtualCollection_1
-      requestBody:
-        content:
-          text/xml:
-            schema:
-              type: object
-          application/xml:
-            schema:
-              type: object
-          application/json:
-            schema:
-              type: object
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-  /v2/collections/{id}:
-    get:
-      operationId: getVirtualCollectionDetailsRedirect_1
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        default:
-          description: default response
-          content:
-            text/html: {}
-    put:
-      operationId: updateVirtualCollection_1
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      requestBody:
-        content:
-          text/xml:
-            schema:
-              type: object
-          application/xml:
-            schema:
-              type: object
-          application/json:
-            schema:
-              type: object
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-    delete:
-      operationId: deleteVirtualCollection_1
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-  /v2/collections/{id}/state:
-    get:
-      operationId: getVirtualCollectionState_1
-      parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-          format: int64
-      responses:
-        default:
-          description: default response
-          content:
-            text/xml: {}
-            application/xml: {}
-            application/json: {}
-    post:
-      operationId: setVirtualCollectionState_1
       parameters:
       - name: id
         in: path
